--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     }
 
     function authFastTrack() {
-        let p = prompt("Masukkan Password Fast Track (Cth: 1234):");
+        let p = prompt("Masukkan Password Fast Track :");
         if(p === "1234") { // Password Fast Track
             document.getElementById('landing-page').style.transform = 'translateY(-100%)';
             setTimeout(() => {
