--- a/index.html
+++ b/index.html
@@ -157,7 +157,6 @@
 
     <div id="landing-page">
         <h1 style="color:white; margin-bottom:5px">Sistem Aset YPKT</h1>
-        <p style="color:#94a3b8; margin-top:0; margin-bottom:30px">Versi 21 - Online (Firebase)</p>
 
         <div class="landing-grid">
             <div class="landing-card" onclick="openMode('public')">
@@ -174,7 +173,7 @@
             </div>
         </div>
     </div>
-
+ <p style="color:#94a3b8; margin-top:0; margin-bottom:30px">credit to Nurul syuhaida (intern)</p>
     <div id="app-container">
         
         <div class="sidebar" id="sidebar" style="display:none">
