--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </div>
 
     <div id="landing-page">
-        <h1 style="color:white; margin-bottom:5px">Sistem Aset YPKT</h1>
+        <h1 style="color:white; margin-bottom:5px">Sistem Aset YPKT</h1><br><br>
 
         <div class="landing-grid">
             <div class="landing-card" onclick="openMode('public')">
