--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="info-item"><b>Secure</b>Sistem</div>
         </div>
 
-        <a href="index.html" class="btn-enter">
+        <a href="menu.html" class="btn-enter">
             Log Masuk Portal <span>➔</span>
         </a>
 
