--- a/jejak.html
+++ b/jejak.html
@@ -177,7 +177,7 @@
             <a href="jejak.html" class="nav-item active">
                 📍 2. Jejak Aset
             </a>
-            <a href="#" class="nav-item" onclick="Swal.fire('Info', 'Halaman Serahan Pulang belum siap.', 'info')">
+            <a href="pulang.html" class="nav-item">
                 📦 3. Serahan Pulang
             </a>
             <a href="#" class="nav-item" onclick="Swal.fire('Info', 'Halaman Nota sulit.', 'info')">
